[gd_scene load_steps=2 format=2]

[ext_resource path="res://BattleScript.gd" type="Script" id=1]

[node name="BattleGUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_right = 500.0
margin_bottom = 95.0

[node name="CharacterData" type="Node2D" parent="Panel"]

[node name="Character1Label" type="Label" parent="Panel/CharacterData"]
margin_right = 72.0
margin_bottom = 14.0
text = "Character 1"

[node name="Character2Label" type="Label" parent="Panel/CharacterData"]
visible = false
margin_top = 18.0
margin_right = 72.0
margin_bottom = 32.0
text = "Character 2"

[node name="Character3Label" type="Label" parent="Panel/CharacterData"]
visible = false
margin_top = 36.0
margin_right = 72.0
margin_bottom = 50.0
text = "Character 3"

[node name="Character4Label" type="Label" parent="Panel/CharacterData"]
visible = false
margin_top = 54.0
margin_right = 72.0
margin_bottom = 68.0
text = "Character 4"

[node name="CombatButtons" type="VBoxContainer" parent="Panel"]
margin_left = 200.0
margin_right = 250.0
margin_bottom = 44.0

[node name="AttackButton" type="Button" parent="Panel/CombatButtons"]
margin_right = 52.0
margin_bottom = 20.0
text = "Attack"

[node name="SpellButton" type="Button" parent="Panel/CombatButtons"]
margin_top = 24.0
margin_right = 52.0
margin_bottom = 44.0
text = "Spell"

[node name="Enemy Data" type="Node2D" parent="Panel"]
position = Vector2( 350, 0 )

[node name="Enemy1Label" type="Label" parent="Panel/Enemy Data"]
margin_right = 72.0
margin_bottom = 14.0
text = "Enemy 1"

[node name="Enemy2Label" type="Label" parent="Panel/Enemy Data"]
visible = false
margin_top = 18.0
margin_right = 72.0
margin_bottom = 32.0
text = "Enemy 2"

[node name="Enemy3Label" type="Label" parent="Panel/Enemy Data"]
visible = false
margin_top = 36.0
margin_right = 72.0
margin_bottom = 50.0
text = "Enemy 3"

[node name="Enemy4Label" type="Label" parent="Panel/Enemy Data"]
visible = false
margin_top = 54.0
margin_right = 72.0
margin_bottom = 68.0
text = "Enemy 4"

[connection signal="pressed" from="Panel/CombatButtons/AttackButton" to="." method="_on_AttackButton_pressed"]
[connection signal="pressed" from="Panel/CombatButtons/SpellButton" to="." method="_on_SpellButton_pressed"]
